--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,6 +3,13 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/hardiwan/daftarhadir/
     - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp dhxmia1.html $DEPLOYPATH
+    - /bin/cp xmia1.html $DEPLOYPATH
+    - /bin/cp xmia2.html $DEPLOYPATH
+    - /bin/cp xmia3.html $DEPLOYPATH
+    - /bin/cp xmia4.html $DEPLOYPATH
+    - /bin/cp xmia5.html $DEPLOYPATH
+    - /bin/cp xiimia4.html $DEPLOYPATH
+    - /bin/cp xiimia5.html $DEPLOYPATH
+    - /bin/cp xiimia6.html $DEPLOYPATH
     - /bin/cp style.css $DEPLOYPATH
     - /bin/cp -R img $DEPLOYPATH
